test(): :art: WIP - Adiciona testes unitarios para PetService e PetsApiDelegate
