# src/main/resources/swagger/openapi.yaml
@@ -3,13 +3,13 @@ info:
   title: Pets API
   version: 0.0.1
 tags:
-  - name: pet
+  - name: pets
     description: Everything about your Pets
 servers:
   - url: http://localhost:8080
     description: Localhost server
 paths:
-  /pet:
+  /pets:
     post:
       tags:
         - pet
@@ -31,7 +31,7 @@ paths:
         '405':
           description: Invalid input
       x-inner-class: false
-  /pet/findByStatus:
+  /pets/findByStatus:
     get:
       tags:
         - pet
@@ -62,7 +62,7 @@ paths:
         '400':
           description: Invalid status value
       x-inner-class: false
-  /pet/{petId}:
+  /pets/{petId}:
     get:
       tags:
         - pet
@@ -136,7 +136,7 @@ paths:
         '404':
           description: Pet not found
       x-inner-class: false
-  /pet/{petId}/photo:
+  /pets/{petId}/photo:
     post:
       tags:
         - pet
